Fixed subtitle spacing.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@ html, .table > div {
 	line-height: 2em;
 	letter-spacing: -.02em;
 	color:#F8F5F4;
-	background-color: #101010;
+	background-color: #0A0A0A;
 }
 
 body {
@@ -76,7 +76,7 @@ h1, .subtitle {
 
 .subtitle {
 	margin-top: 0.6em;
-	margin-bottom: 0;
+	margin-bottom: -0.4em;
 	color: #F5474B;
 }
 
